<resources>
    <string name="app_name">Digital Diary</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="capture_image">Capture Image</string>
    <string name="capture_audio">Capture Audio</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="audio_stop_capture">Stop Recording</string>
    <string name="add_image">Add Image</string>
    <string name="add_audio">Add Audio</string>
    <string name="location">Location: %s</string>
    <string name="created_at">Created at: %s</string>
    <string name="updated_at">Updated at: %s</string>
    <string name="edit">Edit entry</string>
    <string name="pin_hint">Enter PIN</string>
    <string name="pin_length_error">PIN must be between 4 and 10 digits</string>
    <string name="pin_set">PIN set successfully</string>
    <string name="pin_mismatch">PINs do not match</string>
    <string name="pin_confirm">Please confirm your PIN</string>
    <string name="pin_incorrect">Incorrect PIN</string>
    <string name="confirm_pin_hint">Confirm PIN</string>
    <string name="login">Login</string>
    <string name="no_entries_message">No entries found. Create a new entry in order to see your entry on this page</string>
    <string name="title_required">Title is required</string>
    <string name="content_required">Content is required</string>
    <string name="diary_entry_saved">Diary entry saved</string>
    <string name="img_picker_title">Choose an option</string>
    <string name="img_picker_camera">Take a picture</string>
    <string name="img_picker_gallery">Choose from gallery</string>
    <string name="perms_required">Permissions Required"</string>
    <string name="perms_required_desc">This app needs location and audio permissions to function properly.</string>
    <string name="perms_required_grant">Grant</string>
    <string name="perms_required_deny">Deny</string>
    <string name="perms_denied">Permissions Denied</string>
    <string name="perms_audio_denied">Audio recording permission denied</string>
    <string name="location_unable">Unable to get current location</string>
    <string name="delete_confirmation">Are you sure you want to delete this entry?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="app_add_entry">Add Entry</string>
    <string name="app_edit_entry">Edit Entry</string>
    <string name="entry_deleted">Entry deleted</string>
</resources>
