<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/saveEntryButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/contentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content_hint"
                android:layout_marginBottom="16dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:scaleType="centerCrop"
                android:contentDescription="@string/capture_image" />


            <Button
                android:id="@+id/deleteImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:text="@string/delete_image" />

            <Button
                android:id="@+id/captureImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/capture_image" />

            <com.the8way.digitaldiary.ui.AudioPlayerView
                android:id="@+id/audioPlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/deleteAudioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:text="@string/delete_audio" />

            <Button
                android:id="@+id/captureAudioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/capture_audio" />

            <Button
                android:id="@+id/stopCaptureAudioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                android:text="@string/audio_stop_capture" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/app_add_entry" />

</RelativeLayout>
