<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="258dp"
        android:layout_height="248dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/pinEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/pin_hint"
        android:maxLength="10"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/confirmPinEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/confirm_pin_hint"
        android:maxLength="10"
        android:layout_marginBottom="16dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="16dp" />
</LinearLayout>
